(development): added the updated files