@@ -1,10 +1,7 @@
 package com.jwt.authentication.entities;
 
 import java.io.Serial;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import jakarta.persistence.*;
 import org.springframework.security.core.GrantedAuthority;
@@ -48,47 +45,22 @@ public class User implements UserDetails{
 	@Getter
 	private String about;
 
-	public void setUserId(Long userId) {
-		this.userId = userId;
-	}
-
-	public void setName(String name) {
-		this.name = name;
-	}
-
-	public void setEmail(String email) {
-		this.email = email;
-	}
-
-	public void setPassword(String password) {
-		this.password = password;
-	}
-
-	public void setAbout(String about) {
-		this.about = about;
-	}
-
 //	------------------------------------------------
 
-//	@ManyToMany(fetch = FetchType.EAGER)
-//	@JoinTable(
-//			name = "user_roles",
-//			joinColumns = @JoinColumn(name = "user_id"),
-//			inverseJoinColumns = @JoinColumn(name = "role_id")
-//	)
-//	private Set<Role> roles;
-
-//	@OneToMany(mappedBy = "users", cascade = CascadeType.ALL, fetch = FetchType.EAGER)
-//	private List<Role> role;
-	private String role;
-
+	@ManyToMany(fetch = FetchType.EAGER, cascade =  {CascadeType.PERSIST, CascadeType.MERGE})
+	@JoinTable(
+			name = "user_roles",
+			joinColumns = @JoinColumn(name = "user_id"),
+			inverseJoinColumns = @JoinColumn(name = "role_id")
+	)
+	private Set<Role> roles;
 	//	--------------------------------------------
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
 		// TODO Auto-generated method stub
-		SimpleGrantedAuthority authority = new SimpleGrantedAuthority(this.role);
-		return Arrays.asList(authority);
+		SimpleGrantedAuthority authority = new SimpleGrantedAuthority(this.roles.toString());
+		return List.of(authority);
 	}
 
 	@Override
